--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ a:hover {
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: #101010;
   margin: 0;
   display: flex;
   place-items: center;
