--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -168,19 +168,25 @@
 //Contact
 
 .Contact-Container {
-  margin-top: 15px;
+  margin-top: 40px;
   // margin: auto 50;
-  width: 100vh;
+  width: 160vh;
   .container-Title {
     .contact-Title {
       text-align: center;
       justify-content: center;
       margin: auto 50% !important;
-      font-size: 20px;
+      font-size: 24px;
       padding-top: 20px;
+      font-weight: 600;
     }
   }
   .Form-contact-container {
     display: flex;
+    width: 100%;
+    margin: auto 15%;
+    .container-typography{
+      
+    }
   }
 }
