--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -183,10 +183,56 @@
   }
   .Form-contact-container {
     display: flex;
+    justify-content: space-around;
     width: 100%;
-    margin: auto 15%;
-    .container-typography{
-      
+    margin-top: 100px;
+    .container-typography {
+      width: 29% !important;
+      .name-Typography {
+        font-size: 14px;
+        font-weight: 900;
+        padding-bottom: 10px;
+      }
+      .caption-typo {
+        padding-bottom: 10px;
+      }
+      .email-typo {
+        padding: 1px 0 15px 0;
+        .component-Number {
+          font-weight: 800;
+        }
+      }
+      .find-typo {
+        padding: 1px 0 15px 0;
+      }
+      .social-Link {
+        display: flex;
+        .Link-component {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          margin: 0 5px;
+          background-color: #fff;
+          color: #000;
+          transition: background-color 0.3s;
+
+          &:hover {
+            background-color: #9b46e4;
+          }
+        }
+      }
+      .Img-Contact {
+        border-radius: 15px;
+        img {
+          transition: transform 0.3s ease-in-out;
+        }
+        img:hover {
+          transform: scale(1.1);
+        }
+      }
     }
   }
 }
