just a simple update

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -194,7 +194,7 @@
         padding-bottom: 10px;
       }
       .caption-typo {
-        padding-bottom: 10px;
+        padding: 1px 0 15px 0;
       }
       .email-typo {
         padding: 1px 0 15px 0;
