--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -237,3 +237,14 @@
     }
   }
 }
+//Form Content
+
+.Form-Container{
+  .Form-First-input-Flex{
+    display: flex;
+    justify-content: space-around;
+    .single-Form{
+      
+    }
+  }
+}
