--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -140,7 +140,7 @@
   overflow: hidden;
   z-index: 1;
   padding: 0;
-  background-image: linear-gradient(90deg, #8720df, #491179);
+  background-image: linear-gradient(90deg, #8720DF, #670D5E);
 
   .fast-marque {
     overflow: hidden;
