--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,8 +1,13 @@
 //Sidebar
 .sideBarContainer {
   background-color: #000000;
-  height: 100vh;
-  .sideBarImg {
+  height: 102vh;
+  margin-top: -14px;
+  max-width:249px !important;
+  position:fixed;
+  top: 0;
+  bottom: 0;
+  .sideBarImg { 
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -64,8 +69,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 85px;
-  margin-top: 45px;
+  margin-left: 318px;
+  margin-top: 90px;
 
   .Home-container {
     .Home-hello {
@@ -136,7 +141,8 @@
 //Home Component
 .fast-Container {
   width: 100%;
-  margin-top: 125px;
+  margin: 125px 0 50px 0;
+
   overflow: hidden;
   z-index: 1;
   padding: 0;
@@ -155,7 +161,7 @@
     span {
       display: inline-block;
       width: fit-content;
-      padding: 0 40px;
+      padding: 0 50px;
       color: white;
       .img-fast {
         height: 20px;
@@ -166,18 +172,17 @@
 }
 
 //Contact
-
 .Contact-Container {
   padding: 10px 0px 0 -10px;
-  // margin: auto 50;
+  margin-left: 200px;
   width: 160vh;
   .container-Title {
     .contact-Title {
       text-align: center;
       justify-content: center;
-      margin: auto 50% !important;
+      margin: 20px 50% !important;
       font-size: 24px;
-      padding-top: 20px;
+      padding-top: 20px !important;
       font-weight: 600;
     }
   }
