--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -5,6 +5,7 @@
   margin-top: -14px;
   max-width:249px !important;
   position:fixed;
+  z-index: 2;
   top: 0;
   bottom: 0;
   .sideBarImg { 
@@ -15,13 +16,13 @@
     margin: 0 17px;
   }
   .sidebar-link-container {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
     color: white;
     text-decoration: none;
     margin-left: 2px;
     .sidebar-Link {
-      margin-bottom: -2px;
+      margin-bottom: -20px;
     }
 
     &:hover,
@@ -29,12 +30,16 @@
       color: #9b46e4;
     }
     .SideBar-icon {
-      padding-right: 20px;
+      padding-right: 18px;
+      width:3rem;
+      height: 3rem;
+      
     }
   }
 }
 .SideBarFooter {
   position: absolute;
+  z-index: 100;
   bottom: 5px;
   left: 5px;
 }
@@ -142,9 +147,7 @@
 .fast-Container {
   width: 100%;
   margin: 125px 0 50px 0;
-
   overflow: hidden;
-  z-index: 1;
   padding: 0;
   background-image: linear-gradient(90deg, #8720DF, #670D5E);
 
@@ -166,6 +169,7 @@
       .img-fast {
         height: 20px;
         width: 200%;
+        z-index: 1;
       }
     }
   }
