change scss Home

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -78,8 +78,9 @@
   margin-top: 90px;
 
   .Home-container {
+    width: 50%;
     .Home-hello {
-      height: 60px;
+      height: 50px;
       margin-left: -19px;
     }
 
