--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -132,7 +132,8 @@
         background-color: #101010;
         &:hover,
         &.active {
-          background-color: #111c1c;
+          background-color: #9b46e4;
+          color: white;
         }
       }
     }
