--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 30px 30px 0px 30px;
+    padding: 2px 30px 0px 30px;
     margin: 0 17px;
   }
   .sidebar-link-container {
@@ -129,6 +129,7 @@
         font-size: 15px;
         border: 1px solid #9b46e4;
         border-radius: 10px;
+        font-weight: 700;
         background-color: #101010;
         &:hover,
         &.active {
@@ -147,11 +148,11 @@
 //Home Component
 .fast-Container {
   width: 100%;
-  margin: 111px 0 50px 0;
   overflow: hidden;
-  padding: 0;
+  position: fixed;
+  z-index: 1;
+  bottom: 0px;
   background-image: linear-gradient(90deg, #8720df, #670d5e);
-
   .fast-marque {
     overflow: hidden;
     white-space: nowrap;
